overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,35 @@
+.App {
+  height: 100%;
+}
+
 h2 {
   width: 43%;
   text-align: center;
 }
 
 .spline {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   position: absolute;
   z-index: 1;
 }
 
 .close {
+  overflow-y: hidden;
   opacity: 0;
   width: 0;
   height: 0;
-  transition: width 3s 3s, height 3s 3s, opacity 2s;
+  /* transition: width 2s 2s, height 2s 2s, opacity 2s; */
+
 }
 
 .loader {
-
   height: 100vh;
   width: 100%;
   background-color: rgb(0, 0, 0);
   position: absolute;
   color: white;
   z-index: 2;
-  margin: 0;
-
-
 }
 
 .page1 {
